# FedGF

./: MyFingerA.STEP
1.Hardware/3D/: MyFingerB.STEP  MyFingerC.STEP  MyFingerD.STEP
1.Hardware/PCB/: SRH_V2.0.eprj
2.Software/Network/: pyproject.toml
2.Software/Network/baseline/fl-pytorch-baseline/: client.txt  loding_logs.py  pyproject.toml
2.Software/Network/baseline/fl-pytorch-baseline/fl_pytorch/: client_app.py  config.py  dataloader.py  server_app.py  task.py
2.Software/Network/baseline/local/: block.py  client.txt  config.py  dataloader.py  loading_logs.py  loading_net.py  net.py  train.py
2.Software/Network/fl-pytorch/: loding_logs.py
2.Software/Network/fl-pytorch-FedGP/: README.md  client.txt  loding_logs.py  pyproject.toml
2.Software/Network/fl-pytorch-FedGP/fl_pytorch/: __init__.py  client_app.py  dataloader.py  server_app.py  task.py
2.Software/Network/fl-pytorch/fl_pytorch/: client_app.py  config.py  dataloader.py  server_app.py
2.Software/Network/fl-pytorch/logs/: evaluation_results_round_1.mat
2.Software/Network/fl_pytorch/: task.py
2.Software/SRH_V2.0/: SRH_V2.0.ioc
2.Software/SRH_V2.0/Core/Inc/: main.h  stm32f1xx_it.h
2.Software/SRH_V2.0/Core/Src/: adc.c  dma.c  gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
2.Software/SRH_V2.0/MDK-ARM/: JLinkLog.txt  SRH_V2.0.uvguix.raow9  SRH_V2.0.uvoptx  SRH_V2.0.uvprojx  startup_stm32f103xb.lst
2.Software/SRH_V2.0/MDK-ARM/RTE/_SRH_V2.0/: RTE_Components.h
2.Software/SRH_V2.0/User/Debug/: debug.c  debug.h
2.Software/SRH_V2.0/User/ResistanceADC/: ResistanceADC.c  ResistanceADC.h
